--- a/데이터타입.md
+++ b/데이터타입.md
@@ -26,7 +26,7 @@ N = 10000000 인 경우를 생각해 봤을 때, int 배열로 하면 4byte * 10
   
 ( * 자바의 데이터타입 : 기본형(원시타입), 참조형(클래스타입 - 참조변수에 담아야하는데 이때 4byte(정수형일 경우) 혹은 8byte(실수형일 경우)의 데이터를 저장할 수 있다.)
 
- => 약 5배의 차이가 난다.
+ => 약 **5배**의 차이가 난다.
  
 
 ----------
@@ -35,12 +35,12 @@ N = 10000000 인 경우를 생각해 봤을 때, int 배열로 하면 4byte * 10
 * 자바의 데이터타입
 1. 기본형 
   - 원시타입 자료형이 해당
-  - Stack 영역에 변수와 값이 모두 저장된다.
+  - **Stack 영역에 변수와 값이 모두 저장**된다.
 2. 참조형 
   - 클래스타입으로 객체나 배열이 해당
-  - Stack 영역에 객체 변수가 저장되는데 이 때 값도 저장되는 것이 아니다.
+  - **Stack 영역에 객체 변수가 저장**되는데 이 때 값도 저장되는 것이 아니다.
   - 변수에는 값이 저장되어 있는 메모리 주소값이 저장된다.
-  - Heap 영역의 해당 주소값에 값이 저장되어있다.
+  - **Heap 영역의 해당 주소값에 값이 저장**되어있다.
  
 
 ![변수](https://user-images.githubusercontent.com/55968079/146918326-27d52155-4058-46a9-b2d5-15d05930ca1d.PNG)
