--- a/데이터타입.md
+++ b/데이터타입.md
@@ -15,7 +15,9 @@
 
 N = 10000000 인 경우를 생각해 봤을 때, int 배열로 하면 4byte * 10000000 = 40000000byte, 즉 약 38MB이므로 메모리 초과로 실패한다.
 
-그렇다면 List로 풀기 위해 Integer 객체를 사용하면 어떻게 될까, 분명 더 많은 메모리가 쓰일 거 같은데 정확히 알고 싶어서 간단하게 공부해봤다.
+문제 해결은 아주 간단하게 다른 방법으로 해결했다.
+
+List로 정렬해서 푼다해도 메모리 초과로 실패할 것을 알지만 만약 List로 풀기 위해 Integer 객체를 사용하면 어떻게 될까, 분명 더 많은 메모리가 쓰일 거 같은데 정확히 알고 싶어서 간단하게 공부해봤다.
 
 ##### int 배열과 Integer 배열의 크기 비교해보기
 
