--- a/데이터타입.md
+++ b/데이터타입.md
@@ -30,7 +30,11 @@ List로 정렬해서 푼다해도 메모리 초과로 실패할 것을 알지만
 
  => 약 **5배**의 차이가 난다.
  
-
+#### 마무리
+ 만약 List를 사용한다면 약 190MB의 메모리가 사용된다. 앞으로 주어진 문제의 조건을 잘 보고 어떤 자료형, 자료구조, 클래스를 사용할지 선택하는데 조금이나마 도움이 될 것 같다.
+ 
+ (알고리즘 문제에서 메모리 제한이 256MB면 엄청 많다는 것을 새삼 다시 깨닫게 됐다.)
+ 
 ----------
 ###### 파생된 내용정리
 
